[package]
name = "weather_apibackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.10.0"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
dotenv = "0.15.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
